prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/unknown_symbol.nut
// EXPECT_ERROR: "Unknown variable"
let x = undefined_var
